Colaboratory を使用して作成しました

--- a/Similarity.ipynb
+++ b/Similarity.ipynb
@@ -53,7 +53,7 @@
         "!pip install nltk\n",
         "!pip install gensim"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "nltk.download(\"wordnet\")\n",
         "nltk.download(\"punkt\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +888,7 @@
         "           \"I bought some apples and strawberries. I will eat an apple <b>tomorrow.</b>\",\n",
         "           \"I play basketball every day. I like Michael Jordan (born February 17, 1963).\"]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -924,9 +924,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 68
         },
-        "outputId": "f1219e33-f644-49c8-8266-28127cd3ab44"
+        "outputId": "369c038e-7f33-46a1-bd35-97ca9e394957"
       },
       "source": [
         "import re\n",
@@ -939,7 +939,7 @@
         "    pattern2 = r'<(/)?b>' #(/)?は，/があってもなくても良いということ\n",
         "    text = re.sub(pattern2, '', text)    \n",
         "    # ()内を削除\n",
-        "    pattern3 = r'(.*?)\\.'\n",
+        "    pattern3 = r'\\(.*\\)' #r'(.*?)'ではだめ．　()は，エスケープが必要な文字（正規表現における意味を持っている文字なので，そのまま使えない）．\n",
         "    text = re.sub(pattern3, '', text)\n",
         "    return text\n",
         "  \n",
@@ -947,14 +947,14 @@
         "for text in documents:\n",
         "    print(cleaning_text(text))"
       ],
-      "execution_count": 33,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\n",
-            "\n",
-            "\n"
+            "I like apples and a strawberries. I will buy an apple tomorrow Fresco.\n",
+            "I bought some apples and strawberries. I will eat an apple tomorrow.\n",
+            "I play basketball every day. I like Michael Jordan .\n"
           ],
           "name": "stdout"
         }
