Colaboratory を使用して作成しました

--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -6,7 +6,7 @@
       "name": "HW01.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM6F28Lz0bo/OceysKk6Ohm",
+      "authorship_tag": "ABX9TyPUPE4/pXibjBOP4Zx7m3on",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,7 +307,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##jaccard係数を定義"
+        "##Jaccard係数/ Sørensen-Dice係数/Szymkiewicz-Simpson係数を定義"
       ]
     },
     {
