--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -6,7 +6,7 @@
       "name": "HW01.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPUPE4/pXibjBOP4Zx7m3on",
+      "authorship_tag": "ABX9TyOTeBq8p5vRx64SoJiByNWT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,7 +209,13 @@
         "        return word\n",
         "    else:\n",
         "      return lemma\n",
-        "    \n",
+        "\n",
+        "  def remove_stopwords(word, stopwordset):\n",
+        "    if word in stopwordset:\n",
+        "      return None\n",
+        "    else:\n",
+        "      return word\n",
+        "\n",
         "  text = cleaning_text(text)\n",
         "  tokens = tokenize_text(text)\n",
         "  tokens = [lemmatize_word(word) for word in tokens]\n",
@@ -296,6 +302,35 @@
         "  exec('set_{}={}'.format(i,set(doc)))\n",
         "  #print('set_{}'.format(i))\n",
         "  #exec('print(set_{})'.format(i))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n3f6yIqGpYQO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_list=[]\n",
+        "\n",
+        "for i,doc in zip(range(10),pp_docs):\n",
+        "  set_list.append(set(doc))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IQ3YUMMnp7-o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_list[0]"
       ],
       "execution_count": null,
       "outputs": []
@@ -401,6 +436,21 @@
         "for i in range(1):\n",
         "  for j in range(10):\n",
         "    exec('print(\"jaccard({}, {}) = \",jaccard_similarity(set_{}, set_{}))'.format(i,j,i,j))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1gUnTuDptsvd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in range(1):\n",
+        "  for j in range(10):\n",
+        "    exec('print(\"jaccard({}, {}) = \",jaccard_similarity(set_list[{}], set_list[{}]))'.format(i,j,i,j))"
       ],
       "execution_count": null,
       "outputs": []
@@ -678,6 +728,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EPArOs-D0ccM",
+        "colab_type": "text"
+      },
+      "source": [
+        "##文書1と他の文書との比較"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "P8i_KZYl6a76",
@@ -706,6 +766,206 @@
         "i=0\n",
         "for j in range(10):\n",
         "  print(\"cosine_similarity(docs[{}], docs[{}]) = \".format(0,j),cosine_similarity(tfidf_vector[0], tfidf_vector[j]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7ArEgbj1041f",
+        "colab_type": "text"
+      },
+      "source": [
+        "##文書4と他の文書との比較"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d6AVPYQi04Nz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#集合ベース\n",
+        "num=3\n",
+        "sim_1dic(num,'jaccard')\n",
+        "sim_1dic(num,'dice')\n",
+        "sim_1dic(num,'simpson')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ciAuCeh41WA1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#ベクトルベース\n",
+        "i=3\n",
+        "for j in range(10):\n",
+        "  print(\"cosine_similarity(docs[{}], docs[{}]) = \".format(i,j),cosine_similarity(tfidf_vector[i], tfidf_vector[j]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Iv7olvNoM31",
+        "colab_type": "text"
+      },
+      "source": [
+        "##データの比較"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZTQydkzF2iyB",
+        "colab_type": "text"
+      },
+      "source": [
+        "###文書1との積集合"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qw2y3KHOl2w8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_0&set_1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SNL7ItX9oair",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_0&set_2"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zjNOdkvtrPtk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_0&set_4"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ovlEnez_rfXk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sets=[set_0,set_1]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ttt2rVLDs_iV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "type(sets[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WhcLAaIhtFkF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sets[0]&sets[1]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n5vjRQJ5tQ_t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "set_list[0]&set_list[1]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NgJfK01XuNHV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "i=0\n",
+        "for j in range(10):\n",
+        "  if j !=i:\n",
+        "    print('doc{}とdoc{}の積集合'.format(i+1,j+1))\n",
+        "    print(set_list[i]&set_list[j])\n",
+        "    print('\\n')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Eyz3isZe2wqa",
+        "colab_type": "text"
+      },
+      "source": [
+        "###文書4との積集合"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oK_m3lQgubSi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "i=3\n",
+        "for j in range(10):\n",
+        "  if j !=i:\n",
+        "    print('doc{}とdoc{}の積集合'.format(i+1,j+1))\n",
+        "    print(set_list[i]&set_list[j])\n",
+        "    print('\\n')"
       ],
       "execution_count": null,
       "outputs": []
